# watiir-video-redact

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: deploy-scaleway-l4.md
models/: __init__.py  download.py  manifest.json
pipeline/: __init__.py  detect.py  redact.py  stats.py
tests/: conftest.py  test_detect.py  test_redact.py  test_worker.py  test_yolov8_detector.py
training/: .gitignore  ANNOTATION_GUIDE.md  README.md  cvat_labels.json  data.yaml  prepare_dataset.py  split_dataset.py  train.py
worker/: __init__.py  main.py  settings.py  supabase_client.py
