[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watiir-video-redact"
version = "0.1.0"
description = "WATIIR V4 — pipeline AGPL de floutage visages + plaques pour vidéos cartographe."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Dynaminqs", email = "dev@dynaminqs.fr" },
]
keywords = ["watiir", "video-redaction", "yolov8", "agpl", "rgpd"]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  # ML stack (figée V4.0 — cf. README et models/manifest.json)
  "ultralytics>=8.3.0,<9.0.0",
  "opencv-python-headless>=4.10.0,<5.0.0",
  "huggingface-hub>=0.24.0,<1.0.0",
  "numpy>=1.26.0,<2.0.0",
  # Backend Supabase (RPC + Storage)
  "supabase>=2.7.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "pytest-mock>=3.12.0,<4.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/dynaminqs/watiir-video-redact"
"WATIIR (private)" = "https://github.com/JeanJulienMINQUETTE/WATIIR"
"License" = "https://www.gnu.org/licenses/agpl-3.0.html"
"Bug tracker" = "https://github.com/dynaminqs/watiir-video-redact/issues"

[project.scripts]
watiir-redact-worker = "worker.main:main"

[tool.setuptools.packages.find]
include = ["pipeline*", "worker*", "models*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line-too-long (géré par formatter)
  "B008",  # function calls in default args (pas critique)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "e2e: tests d'intégration GPU (skip en CI, run avec WATIIR_REDACT_E2E=1)",
]
